--- a/26jan/index.html
+++ b/26jan/index.html
@@ -487,7 +487,7 @@ max-width: 400px;
     <center><img src="flag.gif" class="img-responsive" alt="TECHNOVEDANT" width="95%"></center>
 </br>
         <center><span class="hny-txt" style="font-size: 42px;">
-<a style="border:0" href="https://www.addlink.ga/" target="_blank" title="Glitter text"><img border='0' alt='empty' src=empty.gif width=20 height=1><img border='0' alt='empty' src=empty.gif width=20 height=1><img border='0' alt='j' src='j1.gif'><img border='0' alt='a' src='a1.gif'><img border='0' alt='i' src='i1.gif'><img border='0' alt='empty' src=empty.gif width=20 height=1><br><img border='0' alt='h' src='h1.gif'><img border='0' alt='i' src='i1.gif'><img border='0' alt='n' src='n.gif'><img border='0' alt='d' src='d1.gif'></a></center>
+<a style="border:0"  target="_blank" title="Glitter text"><img border='0' alt='empty' src=empty.gif width=20 height=1><img border='0' alt='empty' src=empty.gif width=20 height=1><img border='0' alt='J' src='J1.gif'><img border='0' alt='a' src='a1.gif'><img border='0' alt='i' src='i1.gif'><img border='0' alt='empty' src=empty.gif width=20 height=1><br><img border='0' alt='h' src='h1.gif'><img border='0' alt='i' src='i1.gif'><img border='0' alt='n' src='n.gif'><img border='0' alt='d' src='d1.gif'></a></center>
     <br>
 
 <center>
